--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -275,7 +275,7 @@ The study of the localization properties of the LR functional, formerly discusse
 \be\lb{SusceptibilityDef1}
 \dm'(\omega) = \sop{{\cal R}}(\omega) \op\Phi(\omega) \;. 
 \ee
-This reformulation of the problem has the advantage of providing general information on the nature of the excitation spectrum. Results achieved in this way thus describes an intrinsic 
+This alternative formulation of the problem has the advantage of providing general information on the nature of the excitation spectrum. Results achieved in this way thus describes an intrinsic 
 feature of the system under inspection and determine the properties of the LR independently from the specific choice of the perturbing field. 
 
 The analysis is based on the spectral decomposition of the Liouville equation \eqref{LiouvillianRhopomegaDef1} and the make usage of the \emph{excitation operators}, defined through the 
