--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -450,7 +450,7 @@ of the ground state properties of the system.
 FIRST QUESTION: The usage of the $\mu$-basis allows us to obtain a reliable evaluation of the perturbation induced modification of an observable? 
 The answer of this question is based on the analysis of equation \eqref{LinearResponseFunctDef2} and has been partially provided in section \ref{FluctuationState} (move that material in this section?). 
 We can complete the answer by observing that $\ket{f_p(0)}$ can be obtained through a ground state calculation with the explicit time independent perturbation added to the system. So we can perform
-a check on the goodness of the basis in this case as in a ground state calculation. Then use the localization argument of the fluctuation states to extend this reliability of the result up to
+a check on the goodness of the basis in this case as in a ground state calculation. Then use the localization argument of the fluctuation states to extend the reliability of the result up to
 $\omega=|\eps_p|$. 
 
 SO TO SUMMARIZE: below the threshold the numerical convergence is regulated by the localization of the fluctuation states, in this range we can assess the reliability of the results provided by
@@ -464,9 +464,11 @@ priori indicator of the goodness of the results.
 The previous considerations regard the relation between the localization properties of the fluctuation states and the possibility of having a quality indicator for the goodness of the $\mu$-basis. 
 Now we aim to extend/reformulate the question of the numerical convergence to the case in which the excitation-based representation of the LR is adopted.
 
-The construction of the excitation operators requires the explicit sampling of the empty state subspace. Definition of the $\{\alpha\}$-basis: choose the empty eigenstates of the KS Hamiltonian as a 
-basis-set to express the excited state $\ket{\phi^E_p},\bra{\tilde\chi^E_p}$ and their duals. The elements $\{\alpha\}$-basis are expressed in the $\{\mu\}$-basis: since the $\{\mu\}$-basis is finite 
-dimensional so it is also the $\{\alpha\}$-basis. Excitation index becomes discrete and the basis provide a partial sampling of the continuum sector of the excitation landscape.   
+The construction of the excitation operators requires the explicit sampling of the empty state subspace. We introduce the notion of \emph{$\{\alpha\}$-basis}: choose the empty eigenstates of the KS 
+Hamiltonian as a basis-set to express the excited state $\ket{\phi^E_p},\bra{\tilde\chi^E_p}$ and their duals. Excitations are written in the basis of transitions.  
+
+COMMENT: The elements of the $\{\alpha\}$-basis are written in the (finite dimensional) $\{\mu\}$-basis. It follows that the $\{\alpha\}$-basis is finite dimensional too and has $n_\mu-n_{occ}$ degrees
+of freedom. Excitation index becomes discrete and the basis provide a partial sampling of the continuum sector of the excitation landscape.    
 
 
 
