--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -93,7 +93,7 @@
 %\preprint{APS/123-QED}
 
 \title{On the analytic structure of the linear response susceptibility in open systems}
-%\title{Effects of the basis set on the linear response for open systems}
+\title{Localization properties, observable character and computational reliability of the linear response in open systems}
 
 \author{Luigi Genovese}
 \affiliation{Laboratoire de Simulation Atomistique (LSim), SP2M, INAC, CEA-UJF, 17 Av. des Martyrs,
